--- a/source/index.html
+++ b/source/index.html
@@ -34,7 +34,7 @@
               <a href="tel:+79257145111" class="phone__link icon">
                 <span class="phone__link--desktop">8 (925) 714-51-11</span>
               </a>
-              <button class="phone__button" type="button">Заказать консультацию</button>
+              <button class="phone__button js-modal-btn" type="button">Заказать консультацию</button>
             </div>
           </div>
         </div>
@@ -308,7 +308,7 @@
           </p>
         </div>
       </div>
-      <button class="form__submit form__submit--types" type="button">Заказать архитектурное освещение</button>
+      <button class="form__submit form__submit--types js-modal-btn" type="button">Заказать архитектурное освещение</button>
     </div>
   </section>
 
@@ -662,7 +662,7 @@
           <a href="mailto: info@arh-moscow.ru" class="contact__item  contact__item--mail">info@arh-moscow.ru</a>
           <p class="contact__text">Задайте вопрос напрямую:
           </p>
-          <button class="form__submit contact__btn" type="submit">написать в WhatsApp</button>
+          <a href="https://api.whatsapp.com/send?phone=+79257145111" class="form__submit contact__btn" type="submit">написать в WhatsApp</a>
         </div>
       </div>
     </div>
@@ -732,7 +732,7 @@
           <h4 class="contacts-f__title">С нами можно связаться</h4>
           <a href="tel:+79257145111" class="contacts-f__item contacts-f__item--phone">8 (925) 714-51-11</a>
           <a href="mailto: info@arh-moscow.ru" class="contacts-f__item contacts-f__item--mail">info@arh-moscow.ru</a>
-          <a href="" class="contacts-f__telegram">Задайте вопрос в<span
+          <a href="https://t.me/+79257145111" class="contacts-f__telegram">Задайте вопрос в<span
               class="contacts-f__telegram--icon">Telegram</span></a>
           <p class="contacts-f__item contacts-f__item--time">Режим работы: Пн - Пт с 09:00 до 18:00</p>
         </div>
@@ -775,7 +775,7 @@
         <div class="popup__content-wrapper"></div>
       </div>
     </div>
-    <div class="modal-cb hide">
+    <div class="modal-cb modal-cb--closed">
       <div class="modal-cb__wrapper">
         <div class="modal-cb__modal modal">
           <button class="modal-cb__btn" type="button"></button>
