--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body id="main">
   <header class="header">
     <div class="header__container">
       <div class="header__wrapper">
@@ -740,7 +740,7 @@
           <h3 class="navigation-f__title">Навигация по сайту</h3>
           <ul class="navigation-f__list">
             <li>
-              <a href="index.html" class="navigation-f__item">На главную</a>
+              <a href="#main" class="navigation-f__item">На главную</a>
             </li>
             <li>
               <a href="#services" class="navigation-f__item">Услуги</a>
